force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleExcludeCalender__c/SOLXYZCSO001__ReportDeliveryScheduleExcludeCalender__c.object-meta.xml
<CustomObject>
    <description>Manage the mapping of Field</description>
    <label>帳票配信スケジュール除外日</label>
    <nameField>
        <label>名前</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>