force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleExcludeCalender__c/fields/SOLXYZCSO001__ExcludeDate__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ExcludeDate__c</fullName>
    <label>配信除外日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>