force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleExcludeCalender__c/fields/SOLXYZCSO001__ExcludeYear__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ExcludeYear__c</fullName>
    <label>配信除外対象年</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>