force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleExcludeCalender__c/fields/SOLXYZCSO001__Explanation__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__Explanation__c</fullName>
    <description>説明</description>
    <label>説明</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>